objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>training</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Maintainence</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Progress</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Queue__c</fullName>
        <description>Assigned from queue</description>
        <label>Assigned From Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Seq__c</fullName>
        <description>Assignment sequence number</description>
        <label>Assignment Seq</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_Assign_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude from user assignment count</description>
        <label>Q Assign Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Custom_Seq__c</fullName>
        <description>Q-assign custom assign sequence</description>
        <label>Q-assign Custom Seq</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
        <description>Q-assign last assigned date</description>
        <label>Q-assign Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Reviewed_Days__c</fullName>
        <description>Number of days between Q-assign last assignment date and last modified date</description>
        <formula>LastModifiedDate - ortoo_qra__Q_assign_Last_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-assign Reviewed Days</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <businessProcess>training</businessProcess>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>ravi_test</fullName>
        <active>true</active>
        <businessProcess>training</businessProcess>
        <label>ravi_test</label>
    </recordTypes>
    <recordTypes>
        <fullName>santosh</fullName>
        <active>true</active>
        <businessProcess>training</businessProcess>
        <label>santosh</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>